--- a/src/app/pages/home/components/whytv-player/whytv-player.component.css
+++ b/src/app/pages/home/components/whytv-player/whytv-player.component.css
@@ -1,6 +1,8 @@
 :host {
   display: block;
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
@@ -14,9 +16,11 @@
 youtube-player {
   display: block !important;
   position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
   width: 100% !important;
   height: 100% !important;
-  z-index: 10 !important;
+  z-index: 1 !important;
 }
 
 youtube-player iframe {
@@ -26,9 +30,11 @@ youtube-player iframe {
   height: 100% !important;
   top: 0 !important;
   left: 0 !important;
-  z-index: 10 !important;
+  z-index: 1 !important;
   opacity: 1 !important;
   visibility: visible !important;
+  background: transparent !important;
+  border: none !important;
 }
 
 /* Hide YouTube related videos suggestions and overlays at all costs */
